# ros2_odoo_bridge

./: README.md  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: bridge.launch.py
msg/: WoodframePiece.msg
ros2_odoo_bridge/: bridge_node.py  cumotion_client.py  job_server.py  master_controller.py  odoo_client.py  woodframe_utils.py
test/: test_woodframe_utils.py
